UV Island calculation doesn't ignore hidden faces #99659

Closed
opened 2022-07-13 01:26:20 +02:00 by Chris Blackbourn · 3 comments

Open Hidden_Island.blend
Optional (unhide all to show hidden geometry)
image.png
Use the UV Sculpt tool.
Note that if you start on the lower left island, and stroke continuously to the upper islands, the upper islands, the upper islands remain fixed.

Now start with the lower left island, and stroke continuously (over the hidden faces) to the island on the right.
Bug: UVs on the lower left and lower right are part of the same UV Island.

Open [Hidden_Island.blend](https://archive.blender.org/developer/F13289725/Hidden_Island.blend) Optional (unhide all to show hidden geometry) ![image.png](https://archive.blender.org/developer/F13289726/image.png) Use the UV Sculpt tool. Note that if you start on the lower left island, and stroke continuously to the upper islands, the upper islands, the upper islands remain fixed. Now start with the lower left island, and stroke continuously (over the hidden faces) to the island on the right. Bug: UVs on the lower left and lower right are part of the same UV Island.
Author
Member

Added subscriber: @Chris_Blackbourn

Added subscriber: @Chris_Blackbourn

This issue was referenced by 8f543a73ab

This issue was referenced by 8f543a73abc42843fb924fc6d849e3055e3ae011
Author
Member

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Chris Blackbourn self-assigned this 2022-07-13 01:45:49 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99659
No description provided.