Fix T99659: Improve UV Island calculation with hidden faces.

Simplify interface, regularize implementation and some light cleanup.

See also: T79304 and D15419.