source/blender/editors/uvedit/uvedit_ops.c
@@ -544,7 +544,7 @@ static bool uvedit_uv_straighten(Scene *scene, BMesh *bm, eUVWeldAlign tool)
     return false;
   }
 
-  UvElementMap *element_map = BM_uv_element_map_create(bm, scene, false, true, false, true);
+  UvElementMap *element_map = BM_uv_element_map_create(bm, scene, true, false, true);
   if (element_map == NULL) {
     return false;
   }
